# trade-bot

./: CMakeLists.txt  CMakePresets.json
conf-src/: sanitizers_configure.cpp
src/: db.cpp  db.h  indicators.cpp  indicators.h  loader.cpp  loader.h  main.cpp  test.cpp  test.h
